admission/ValidatingAdmissionPolicy/policies/procmount/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: procmount-containers
  annotations:
    kubeapt.io/uuid: "0ceb2a31-3447-4a3c-9e67-ea7fbb65f581"
spec:
  hostUsers: false
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    securityContext:
      procMount: Unmasked
